<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_AddItem"
    android:background="@color/main_background">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="359dp"
        android:layout_height="337dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableLayout
            android:id="@+id/tl_placedOrders"
            android:layout_width="409dp"
            android:layout_height="318dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="189dp">

        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="196dp"
        android:layout_height="111dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#D3D3D3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#D3D3D3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:onClick="onAddItemButtonClick"
        android:text="@string/new_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:backgroundTint="@color/vendor"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="35dp"
        android:onClick="onAddNewInstructionButtonClick"
        android:text="@string/new_instruction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:backgroundTint="@color/vendor"/>

</androidx.constraintlayout.widget.ConstraintLayout>